# ellis

./: .gitignore  .pylintrc  AUTHORS  LICENSE  README.md  blacklists  ellis.conf  pyproject.toml  requirements_dev.txt  setup.cfg
doc/: Ellis_Protocol.md
ellis/: config.py  ellis.py  ellis_modules.py  load_modules.py  main.py  ns.py
ellis/modules/: autorecruit.py
src/ellis/: config.py  ellis.py  ellis_modules.py  load_modules.py  main.py  ns.py  tracecall.py
src/ellis/modules/: autorecruit.py
tests/: test_config.py  test_ellis.py  test_modules.py  test_ns.py  test_tracecall.py
